--- a/styles.css
+++ b/styles.css
@@ -237,9 +237,9 @@ fieldset {
     border-radius: 4px;
     border-color: var(--org);
     display: flex;
-    justify-content: center; /* 가로로 정렬 */
-    gap: 16px; /* 여백 추가 */
-    align-items: center; /* 세로 정렬 */
+    justify-content: center; 
+    gap: 16px; 
+    align-items: center; 
 }
 
 legend {
